# OriVEmu

./: .gitignore  CMakeLists.txt
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
rtl/: emulate.sv  orion_pro_top.sv
rtl/TV80-verilog/: tv80_alu.v  tv80_core.v  tv80_mcode.v  tv80_reg.v  tv80s.v
sim_wrappers/: CMakeLists.txt  sim_top.cpp  sim_top.h
work_dir/ROMs/: ROM2-321-ALTAIR3.ROM  ROM2-321-ALTAIR3.hex  romdisk2.hex  romdisk4.hex  test.lst  test256.hex  testz80.hex
